fix paidfor logos smaller than 200px stretching

--- a/legacy/src/capi-single-paidfor/web/index.scss
+++ b/legacy/src/capi-single-paidfor/web/index.scss
@@ -45,7 +45,8 @@
     }
 
     .badge__logo {
-      width: 200px;
+      display: block;
+      max-width: 200px;
       margin-left: 0;
     }
   }
